--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "lodash": "^3.10.1",
-    "mdast": "^2.1.0"
+    "mdast-util-to-string": "^1.0.0"
   },
   "devDependencies": {
     "diff": "^1.4.0",
@@ -22,7 +22,8 @@
     "tape": "^4.0.0",
     "fs": "0.0.2",
     "graceful-fs": "^4.1.2",
-    "mdast-lint": "^1.1.1"
+    "remark": "^3.0.0",
+    "remark-lint": "^2.0.0"
   },
   "repository": {
     "type": "git",
