--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "url": "http://burntfen.com"
   },
   "dependencies": {
-    "lodash": "^3.10.1",
-    "mdast-util-to-string": "^1.0.0"
+    "lodash": "^4.11.1",
+    "mdast-util-to-string": "^1.0.1",
+    "remark": "^4.2.1"
   },
   "devDependencies": {
-    "diff": "^1.4.0",
-    "tap-spec": "^4.0.0",
-    "tape": "^4.0.0",
+    "diff": "^2.2.2",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.5.1",
     "fs": "0.0.2",
-    "graceful-fs": "^4.1.2",
-    "remark": "^3.0.0",
-    "remark-lint": "^2.0.0"
+    "graceful-fs": "^4.1.3",
+    "remark": "^4.2.1",
+    "remark-lint": "^3.2.0"
   },
   "repository": {
     "type": "git",
