--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remark-title",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "remark plugin to inject a title into a file",
   "main": "index.js",
   "license": "MIT",
@@ -44,5 +44,9 @@
   "homepage": "https://github.com/RichardLitt/remark-title",
   "bugs": {
     "url": "https://github.com/RichardLitt/remark-title/issues"
-  }
+  },
+  "coordinates": [
+    42.3811792,
+    -71.09658209999999
+  ]
 }
