--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "devDependencies": {
     "diff": "^3.2.0",
+    "remark": "^7.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.5.1",
-    "remark": "^7.0.0"
+    "to-vfile": "^2.1.1"
   },
   "repository": {
     "type": "git",
